@@ -122,6 +122,12 @@
 					<td>###GROUPS###</td>
 				</tr>
 			<!--###FIELD_WRAPPER_GROUPS### -->
+			<!--###FIELD_WRAPPER_DATE_INCOMPANY### -->
+				<tr>
+					<td>###LABEL_DATE_INCOMPANY###</td>
+					<td>###DATE_INCOMPANY###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_DATE_INCOMPANY### -->
 			<!--###FIELD_WRAPPER_OPINION### -->
 				<tr>
 					<td>###LABEL_OPINION###</td>
